# ClosedSoT

./: CMakeLists.txt  README.md  package.xml
cartesio/tasks/velocity/: ClosedChain.cpp  ClosedChain.h  PlanarLinkage.cpp  PlanarLinkage.h
examples/launch/: cartesio.launch  slider.launch
examples/srdf/: four_bar_linkage.srdf.xacro
examples/stack/: four_bar_linkage.stack
examples/urdf/: four_bar_linkage.urdf.xacro
include/ClosedSoT/tasks/: LinkageFactory.h
include/ClosedSoT/tasks/velocity/: ClosedChain.h
src/tasks/: LinkageFactory.cpp
src/tasks/velocity/: ClosedChain.cpp
utils/srdf/: utils.srdf.xacro
